# Flow-Wing

./: -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-bird-game-flow-wing-raylib.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-bird-game-flow-wing-raylib.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-FlowWingAnim.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-FlowWingAnim.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-flow-wing-raylib.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-flow-wing-raylib.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-random.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-demo-snake-game-random.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-File-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-File-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-..-..-..-..-..-..-..-..-..-..-..-..-..-..-Users-apple-code-per-Flow-Wing.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-..-..-..-..-..-..-..-..-..-..-..-..-..-..-Users-apple-code-per-Flow-Wing.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-Err-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-Err-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-Error-Err-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-Error-Err-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-File-Err-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-File-Err-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-File-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-File-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-core-VectorModule-Vec-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-modules-core-VectorModule-Vec-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-temp-f1-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-docs-local-temp-f1-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-targets-aot-compiler-file1.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-targets-aot-compiler-file1.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-targets-aot-compiler-local-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-Users-apple-code-per-Flow-Wing-targets-aot-compiler-local-module.ll  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-opt-homebrew-lib-FlowWing-static-modules-..-..-..-..-..-..-..-..-..-..-..-..-Users-apple-code-per-Flow-Wing-lib-mac-silicon-lib-modules-Err-module.bc  -var-folders-1m-ql4hjc5s5_32h16pfp65y5780000gn-T-opt-homebrew-lib-FlowWing-static-modules-..-..-..-..-..-..-..-..-..-..-..-..-Users-apple-code-per-Flow-Wing-lib-mac-silicon-lib-modules-Err-module.ll  .clangd  .dockerignore  .err.json  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile.AOTCompilerDev  Dockerfile.AOTCompilerDevarm  (+25 more)
all-targets/aot-compiler/: CMakeLists.txt  index  my_module.ll  version.cmake
all-targets/compiler/: CMakeLists.txt
all-targets/jit-compiler/: CMakeLists.txt  file.le  jaim.html  jaim.js  jaim.wasm  my_module.ll  my_module.s  program  program.ll  program.s
all-targets/repl/: CMakeLists.txt
all-targets/repl-tests/: CMakeLists.txt
all-targets/tests/: CMakeLists.txt
cmake/deps_builder/: CMakeLists.txt  CMakePresets.json
fw-modules/: CMakeLists.txt
fw-modules/built_in_module/: CMakeLists.txt  built_in_module.c
fw-modules/dynamic/: CMakeLists.txt  dynamic.c
fw-modules/error_module/: Err-module.fg
fw-modules/file_module/: CMakeLists.txt  file-module.fg  libflowwing_file.cpp
fw-modules/io_module/: CMakeLists.txt  io-module.fg  libflowwing_io.cpp
fw-modules/json_module/: json-module.fg
fw-modules/map_module/: CMakeLists.txt  Map-module.fg  libflowwing_map.cpp  map-module.fg
fw-modules/raylib_module/: CMakeLists.txt  libflowwing_raylib.cpp  raylib-module.fg  raylib.h
fw-modules/string_module/: CMakeLists.txt  Str-module.fg  libflowwing_string.c
fw-modules/sys_module/: sys-module.fg
fw-modules/text_module/: CMakeLists.txt  libflowwing_text.c  text-module.fg
fw-modules/vec_module/: CMakeLists.txt  libflowwing_vec.cpp  vec-module.fg
fw-modules/vortex_module/: CMakeLists.txt  httplib.h  libflowwing_vortex.cpp  vortex-module.fg
targets/aot-compiler/: A.fg  B.fg  CMakeLists.txt  aa.fg  call.fg  dynamic.fg  file1.fg  local-module.fg  m.fg  new-tests.fg  script-windows.sh  task.fg  temp.fg  test-module.fg  test.fg  test2.fg  v.fg
targets/jit-compiler/: CMakeLists.txt  version.cmake
targets/repl/: CMakeLists.txt
tests/: CMakeLists.txt  Common.cpp  Common.h  TODO.md  formatter_golden_test.py  migrate_tests.py  runner.py  test_main  test_main.cpp
tests/AOTCompilerTest/: AOTCompilerTest.cpp  AOTCompilerTest.h
tests/BaseTest/: BaseTest.h
tests/BringTest/: BringTest.cpp  BringTest.h
tests/JITCompilerTest/: JITCompilerTest.cpp  JITCompilerTest.h
tests/local/: 1.fg  (+9 more)
(+7618 files in other folders)
