# =============================================================================
# FlowWing | Modules Entry Point
#
# This file serves as the entry point for the fw-modules directory.
# It includes the individual CMakeLists.txt files for each module,
# which in turn define the library targets for the SDK.
# =============================================================================

add_subdirectory(built_in_module)
add_subdirectory(string_module)